Fixes pagination alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -57,6 +57,8 @@ h2 {
 }
 .pagination a {
     padding: .5rem .75rem;
+    display: flex;
+    align-items: center;
 }
 .pagination a:hover {
     background-color: #efefef;
